// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Componentify /> with custom component renders text with italic 1`] = `
Array [
  <span>
    Тhis is my italic 
</span>,
  <span
    style={
        Object {
            "fontStyle": "italic",
          }
    }
>
    text
</span>,
]
`;

exports[`<Componentify /> with nesting renders text with bold and italic words 1`] = `
Array [
  <span>
    Тhis is my 
</span>,
  <span
    style={
        Object {
            "fontWeight": "900",
          }
    }
>
    <span>
        bold and 
    </span>
    <span
        style={
            Object {
                "fontStyle": "italic",
              }
        }
    >
        italic
    </span>
</span>,
  <span>
     text
</span>,
]
`;

exports[`<Componentify /> with nesting renders text with bold link 1`] = `
Array [
  <span>
    Тhis is my bold 
</span>,
  <span
    style={
        Object {
            "fontWeight": "900",
          }
    }
>
    <a
        href="https://"
        targer="_blank"
    >
        google
    </a>
</span>,
  <span>
     link
</span>,
]
`;

exports[`<Componentify /> without nesting renders text with <br /> tag 1`] = `
Array [
  <span>
    Тhis is line one
</span>,
  <br />,
  <span>
    This is line two
</span>,
]
`;

exports[`<Componentify /> without nesting renders text with bold words 1`] = `
Array [
  <span>
    Тhis is bold 
</span>,
  <span
    style={
        Object {
            "fontWeight": "900",
          }
    }
>
    text
</span>,
  <span>
     and 
</span>,
  <span
    style={
        Object {
            "fontWeight": "900",
          }
    }
>
    more
</span>,
  <span>
     text
</span>,
]
`;

exports[`<Componentify /> without nesting renders text with italic words 1`] = `
Array [
  <span>
    Тhis is italic 
</span>,
  <span
    style={
        Object {
            "fontStyle": "italic",
          }
    }
>
    text
</span>,
  <span>
     more text
</span>,
]
`;

exports[`<Componentify /> without nesting renders text with replaced words 1`] = `
Array [
  <span>
    My name is 
</span>,
  <span>
    Snow
</span>,
]
`;

exports[`<Componentify /> without nesting text with link renders text with link with name 1`] = `
Array [
  <span>
    Тhis is 
</span>,
  <a
    href="https://"
    targer="_blank"
>
    google
</a>,
  <span>
     link
</span>,
]
`;

exports[`<Componentify /> without nesting text with link renders text with link without name 1`] = `
Array [
  <span>
    Тhis is 
</span>,
  <a
    href="https://"
    targer="_blank"
>
    google
</a>,
]
`;
